Set up a basic frontend that checks some input and reacts to the output

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -1,10 +1,22 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="remla24-team02">
+    <link rel="icon" href="{% static "images/favicon.ico" %}">
+    <title>URL Phishing Detection</title>
+
+    <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}"/>
 </head>
 <body>
-    <h2>Hi :)</h2>
+    <label for="inputURL">URL:</label>
+    <input type="text" id="inputURL">
+    <button onclick="sendRequest()">Submit</button>
+    <div id="result"></div>
+
+    <script>window.CSRF_TOKEN = "{{ csrf_token }}";</script>
+    <script type="application/javascript" src="{% static "js/script.js" %}"></script>
 </body>
 </html>
