--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -1,11 +1,36 @@
-.green-box {
-    width: 100px;
-    height: 100px;
-    background-color: green;
+/* This removes all browser default margin and padding settings */
+* {
+    margin: 0;
+    padding: 0;
 }
 
-.red-box {
-    width: 100px;
-    height: 100px;
-    background-color: red;
+html, body, .app {
+    width: 100%;
+    height: 100%;
+}
+
+.app {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.app__check {
+    display: flex;
+    flex-direction: row;
+    gap: 0.25rem;
+}
+
+.check__submit {
+    padding: 2px;
+}
+
+.result--safe {
+    color: green;
+}
+
+.result--phishing {
+    color: red;
 }
